chore: Changed api docs path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.datasource.hikari.idle-timeout=30000
 # Logging settings
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# OpenAPI Docs
+springdoc.api-docs.path=/api-docs
